tetrate/tis1106/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bad-resource-1
spec:
  hosts:
  - "my-app.example.com"
  http:
  - route:
    - destination:
        host: "my-app-service.example-namespace.svc.cluster.local"
        subset: "v3"
    - destination:
        host: "my-app-service.example-namespace.svc.cluster.local"
