tetrate/tis1106/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-missing-subsets
spec:
  validationFailureAction: Enforce
