tetrate/tis1106/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-check-missing-subsets
spec:
  steps:
    - name: apply-virtualservice-policy
      try:
        - apply:
            file: ../check-missing-subsets.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-secrets-rbac
      try: 
        - apply:
            file: rbac.yaml

    - name: apply-destinationrule-resource
      try: 
        - apply:
            file: des-resource.yaml
            
    - name: apply-good-resource
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-resource (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
